To do with edit and delete buttons

--- a/js/222.notes.md
+++ b/js/222.notes.md
@@ -134,3 +134,25 @@ class Todo {
 
 export { Todo };
 ```
+
+**Projekto planas, ka po ko daryti**
+
+```js
+class Todo {
+  constructor() {}
+  init() {}
+  generateAddForm() {}
+  generateUpdateForm() {}
+  generateList() {}
+  render() {}
+  addEvents() {}
+
+  createTask() {}
+  printList() {}
+  updateTask() {}
+  deleteTask() {}
+
+  switchForm() {}
+  updateLocalStorage() {}
+}
+```
