With comments in notes

--- a/222.notes.md
+++ b/222.notes.md
@@ -157,3 +157,256 @@ class Todo {
   updateLocalStorage() {}
 }
 ```
+
+**Elementu pavadinimu naudojimas**
+todos
+todos_lang = en
+todos_todosList = []
+
+porfolio
+portfolio_lang = en
+portfolio_testimonials = []
+
+mygtukas_labai-didelis_zalias
+mygtukas_labai-mazas_zalias
+
+turime naudoti tinkamus pavadinimus kiekvienam projekte, nes local Storage kaupia
+info ir veliau gali persipinti skirtingi elementai su tais paciais pavadinimais
+
+komponentas_dydis_spalva-balta
+dazniausiai komandos susitaria kaip vadinti elementus, kartais programavimo kalbos turi nustatytus pavadinimu pasirinkimus
+
+**Todo.js su komentarais 2021 07 05**
+
+```js
+class Todo {
+  constructor(IDselector) {
+    this.IDselector = IDselector;
+
+    this.DOM = null;
+    this.listDOM = null;
+
+    this.addFormDOM = null;
+    this.newMessageDOM = null;
+    this.newBorderColorDOM = null;
+    this.buttonSaveDOM = null;
+
+    this.updateFormDOM = null;
+    this.updateMessageDOM = null;
+    this.updateBorderColorDOM = null;
+    this.buttonUpdateDOM = null;
+    this.buttonCancelDOM = null;
+
+    this.localStorageIDcount = 'todosID';
+    this.localStorageTodosKey = 'todosList';
+    this.latestUsedID =
+      JSON.parse(localStorage.getItem(this.localStorageIDcount)) || 0; //paskutinis panaudotas ID, kad refreshinus nepradetu is naujo o testu nuo paskutinio ID, jei nieko nera pradeda nuo 0
+    this.messages =
+      JSON.parse(localStorage.getItem(this.localStorageTodosKey)) || [];
+
+    this.currentlyEditableTaskID = 0;
+
+    this.init();
+  }
+
+  init() {
+    //pasitikrina kur
+    if (!this.isValidSelector()) {
+      return false;
+    }
+    // pasitikrina vieta
+    this.DOM = document.getElementById(this.IDselector);
+    if (!this.DOM) {
+      console.error('ERROR: nerasta vieta, pagal duota selector');
+      return false;
+    }
+    //uzdeda papildoma klase
+    this.DOM.classList.add('todo');
+    // 3 submetodai: ispiesti pradini stiliu (karkasa)
+    this.render();
+    // jei yra pradiniai duomenys, uzpildyti visa info
+    this.renderList();
+    this.addEvents();
+  }
+
+  isValidSelector() {
+    if (typeof this.IDselector !== 'string' || this.IDselector === '') {
+      console.error('ERROR: nevalidus selector');
+      return false;
+    }
+    return true;
+  }
+
+  generateAddForm() {
+    //sukuriam formai id (vienas konkretus elemetas). Greiciausias budas rasti elemeta yra getElementById vs class ar form
+    return `<form id="add_task"> 
+                    <label for="new_text">Message</label>
+                    <input id="new_text" type="text" value="">  
+                    <label for="new_border_color">Border color</label>
+                    <input id="new_border_color" type="color" value="#ff1100">
+                    <button id="save_button" type="submit">Save</button>
+                    <button type="reset">Reset</button>
+                </form>`;
+  }
+
+  generateUpdateForm() {
+    return `<form id="update_task" class="hide">
+                    <label for="updated_text">Message</label>
+                    <input id="updated_text" type="text">
+                    <label for="updated_border_color">Border color</label>
+                    <input id="updated_border_color" type="color">
+                    <button id="update_button" type="submit">Update</button>
+                    <button id="cancel_button" type="button">Cancel</button>
+                </form>`;
+  }
+
+  generateList() {
+    return `<div class="list"></div>`;
+  }
+
+  renderList() {
+    for (const task of this.messages) {
+      this.renderTask(task.id, task.messageText, task.borderColor);
+    }
+  }
+
+  renderTask(id, text, borderColor = '#ccc') {
+    if (typeof text !== 'string' || text === '') {
+      return '';
+    }
+    const HTML = `<div id="task_${id}" class="task" style="border-color: ${borderColor}">
+                            <div class="text">${text}</div>
+                            <div class="actions">
+                                <div class="btn edit">Edit</div>
+                                <div class="btn delete">Delete</div>
+                            </div>
+                        </div>`;
+
+    this.listDOM.insertAdjacentHTML('afterbegin', HTML); //kokiu eiliskumu yra generuojamas turinys 'afterbegin'
+
+    const taskDOM = this.listDOM.querySelector('.task'); //susirandame task elementa, kad zinoti kuri reikia trinti ar editinti
+    const editDOM = taskDOM.querySelector('.edit'); //randamas pirmasis mygtukas, t.y veliausiai sugeneruotas
+    const deleteDOM = taskDOM.querySelector('.delete');
+
+    //ka daryti paspaudus delete (addEventListener)
+    deleteDOM.addEventListener('click', () => {
+      //zinute:  Ar tikrai norite istrinti
+      if (!confirm('Ar tikrai norite istrinti si irasa?')) {
+        return false;
+      }
+      //console.log('trinamas:', taskDOM.querySelector('.text').textContent) - patikrinti koks tekstas trinamas;
+
+      //istrinam is interface bet ne is atminties
+      taskDOM.remove();
+
+      //einam per messages sarasa ir iskvieciam metoda filter, bandysim filtruoti ka palikti ka ismesti.
+      //Reikia palikti tuos taskus, kurie nesutampa !=== su trinamo elemento ID
+      this.messages = this.messages.filter((task) => task.id !== id); //jei yra riestiniai skliaustai t.b ir return, jei nera return nera ir skliaustu
+      localStorage.setItem(
+        this.localStorageTodosKey,
+        JSON.stringify(this.messages)
+      ); //console.log('trinamas:', taskDOM.querySelector('.text').textContent);
+    });
+    // ka daryti paspausdus Edit mygtuka
+    editDOM.addEventListener('click', () => {
+      this.addFormDOM.classList.add('hide');
+      this.updateFormDOM.classList.remove('hide'); //console.log('editing...', text);
+
+      this.updateMessageDOM.value = text;
+      this.updateBorderColorDOM.value = borderColor;
+      this.currentlyEditableTaskID = id;
+    });
+  }
+
+  render() {
+    //sablonas(skeletas). sugeneruoja abi formas + generate lista
+    let HTML = '';
+    HTML += this.generateAddForm();
+    HTML += this.generateUpdateForm();
+    HTML += this.generateList();
+    this.DOM.innerHTML = HTML;
+
+    //susirandami papildomi mus dominantys elementai, po to kai prikabinama AddForm
+    this.listDOM = this.DOM.querySelector('.list');
+
+    this.addFormDOM = document.getElementById('add_task');
+    this.newMessageDOM = document.getElementById('new_text');
+    this.newBorderColorDOM = document.getElementById('new_border_color');
+    this.buttonSaveDOM = document.getElementById('save_button');
+    // updateForm
+    this.updateFormDOM = document.getElementById('update_task');
+    this.updateMessageDOM = document.getElementById('updated_text');
+    this.updateBorderColorDOM = document.getElementById('updated_border_color');
+    this.buttonUpdateDOM = document.getElementById('update_button');
+    this.buttonCancelDOM = document.getElementById('cancel_button');
+  }
+
+  addEvents() {
+    // pridedamas uzrasas
+    this.buttonSaveDOM.addEventListener('click', (e) => {
+      e.preventDefault();
+
+      const message = this.newMessageDOM.value;
+      const color = this.newBorderColorDOM.value;
+
+      if (message === '') {
+        return false;
+      }
+
+      this.messages.push({
+        id: ++this.latestUsedID, //idedam id kad galetume atskirti ir identifikuoti kiekviena zinute, ID -unikalus tik tai vienai zinutei skirtas nr
+        messageText: message,
+        borderColor: color,
+      });
+      //zinutes ispiesimas
+      this.renderTask(this.latestUsedID, message, color);
+
+      localStorage.setItem(
+        this.localStorageIDcount,
+        JSON.stringify(this.latestUsedID)
+      ); //saugosi i atminti dvi atskiros eilutes
+      localStorage.setItem(
+        this.localStorageTodosKey,
+        JSON.stringify(this.messages)
+      );
+    });
+
+    // iraso istrinimas
+    this.buttonCancelDOM.addEventListener('click', (e) => {
+      e.preventDefault();
+      this.addFormDOM.classList.remove('hide');
+      this.updateFormDOM.classList.add('hide');
+    });
+
+    this.buttonUpdateDOM.addEventListener('click', (e) => {
+      e.preventDefault();
+      const message = this.updateMessageDOM.value;
+      const color = this.updateBorderColorDOM.value;
+
+      for (const task of this.messages) {
+        if (task.id === this.currentlyEditableTaskID) {
+          task.messageText = message;
+          task.borderColor = color;
+        }
+      }
+      localStorage.setItem(
+        this.localStorageTodosKey,
+        JSON.stringify(this.messages)
+      );
+
+      // uzraso redagavimas
+      const taskDOM = this.DOM.querySelector(
+        '#task_' + this.currentlyEditableTaskID
+      );
+      const taskTextDOM = taskDOM.querySelector('.text');
+      taskTextDOM.innerText = message;
+      taskDOM.style.borderColor = color;
+
+      this.addFormDOM.classList.remove('hide');
+      this.updateFormDOM.classList.add('hide');
+    });
+  }
+}
+
+export { Todo };
+```
