--- a/222.notes.md
+++ b/222.notes.md
@@ -12,9 +12,9 @@ class Todo {
     this.buttonSaveDOM = null;
 
     // Jei informacija yra naudoti ja o jei nera naudoti tuscia masyva. Jei bus tik [] local storage informacija bus isstrinama.
-    // JSON.parse naudojama informacijai dekoduoti (isparsinti), refresinus info bus is=rasoma toliau, sekanti karta refreshinus.
+    // JSON.parse naudojama informacijai dekoduoti (isparsinti), refresinus info bus irasoma toliau, sekanti karta refreshinus.
     // Atskaitos taskas bus paskutine zinute kuri buvo irasyta iki refreshinimo
-    // jei projektas prasideda nuo nulio reikia || (?? - kai kurios narsykles priima ir tokia versija, naujasnios narsykles) []
+    // jei projektas prasideda nuo nulio reikia || (?? - kai kurios narsykles priima ir tokia versija, naujasnes narsykles) []
     this.messages = JSON.parse(localStorage.getItem('messages')) || [];
 
     this.init();
@@ -73,7 +73,7 @@ class Todo {
   //kai buvo ispiestas bazinis HTML
   renderList() {
     for (const task of this.messages) {
-      //renderTAsk duodame ka reikia ispiesti
+      //renderTask duodame ka reikia ispiesti
       this.renderTask(task.messageText, task.borderColor);
     }
   }
@@ -108,7 +108,7 @@ class Todo {
   }
 
   addEvents() {
-    //Ivedama i forma informacija ir pasirenkama border spalva ir mes ta informacija issitruakiam (107, 108)
+    //Ivedama i forma informacija ir pasirenkama border spalva ir mes ta informacija issitraukiam (107, 108 eilutes)
     this.buttonSaveDOM.addEventListener('click', (e) => {
       e.preventDefault();
       const message = this.newMessageDOM.value;
@@ -126,7 +126,7 @@ class Todo {
         borderColor: color,
       });
       //atnaujiname local storage informacija. Parefreshinus puslapi informacija lieka local storage, ji nera istrinama tol kol refreshinus vel ivedamas naujas tekstas
-      //jei esame nurode kad thic=s.message = []; tuscias sarasas
+      //jei esame nurode kad this.message = []; tuscias sarasas
       localStorage.setItem('messages', JSON.stringify(this.messages));
     });
   }
